src/App.css
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Fira Code', monospace;
  scroll-behavior: smooth;
}

section {
  min-height: 100vh;
}

